--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 askama = "0.12.1"
 axum = {version="0.7.2", features=["tracing"]}
+dotenv = "0.15.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
