--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 askama = "0.12.1"
 axum = {version="0.7.2", features=["tracing"]}
+axum-extra = { version = "0.9.0", features = ["typed-header"] }
 dotenv = "0.15.0"
+jsonwebtoken = "9.2.0"
+once_cell = "1.19.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
